# arch-cli

./: .gitignore  AmazonQ.md  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  arch-cli-improved.sh  arch-cli.sh  pyproject.toml  setup.py
arch_cli/: __init__.py  dependencies.py  finops.py  main.py  utils.py
aws_resources/2025-05-06_16-59-41/: ec2_instances.json
modules/: arch_prune.sh  automation.sh  aws_profile.sh  aws_resources.sh  containers.sh  cost_optimization.sh  database.sh  dependencies.sh  finops.sh  monitoring.sh  prowler.sh  security.sh  support_user.sh  utils.sh
